# dav-co2-accounting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
co2data/bills/: bill.py  bill_data_provider.py  bill_data_provider_factory.py  bill_id.py  bill_status.py  bill_store.py  concrete_bill_store.py  persistent_bill_data_provider.py  persistent_bill_store.py
co2data/categories/: category.py  category_provider.py  concrete_category_provider.py  importer.py
co2data/departments/: department_provider.py
co2data/eval/: evaluation.py
co2data/gui/: example.py  pdf_viewer.py  pdfviewer_tkinter.py
co2data/gui/pyside/: app.py
co2data/pdf/: concrete_page_provider.py  directory_importer.py  file_system_pdf_store.py  filesystem_cache_page_provider.py  helpers.py  page_provider.py  pdf_store.py  pre_render_page_provider.py
co2data/test/: integration_test.py  pdf_test.py
co2data/tools/: render.py
co2data/workflow/: persistent_status_tracker.py  status_tracker.py
data/: departments.txt
data/categories/: Anlagegüter.csv  Büro.csv  Dienstleistungen.csv  Küche und Sanitärbereich.csv  test_categories.csv
doc/: requirements.md
docker/: Dockerfile
notebook/: eval.ipynb  test_ui.ipynb
notebook/.ipynb_checkpoints/: test_ui-checkpoint.ipynb
tests/categories/: test_csv_import.py
tests/pdf/: test_helpers.py
